# Latent-Brain

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
configs/: base.yaml  latentbrain_release.yaml  mc_maze_large_baseline_suite.yaml  mc_maze_large_latent_interpretability.yaml  mc_maze_large_lfads_diagnostics.yaml  mc_maze_large_lfads_pilot.yaml  mc_maze_large_neural_ode_diagnostics.yaml  mc_maze_large_neural_ode_pilot.yaml  mc_maze_large_recommended_window_cv.yaml  mc_maze_large_unified_scoreboard.yaml  mc_maze_large_window_audit.yaml  mc_maze_small_behavior_decoder.yaml  mc_maze_small_cosmoothing_ridge.yaml  mc_maze_small_cosmoothing_sweep.yaml  mc_maze_small_cv_rate_audit.yaml  mc_maze_small_diagnostic_report.yaml  mc_maze_small_eda.yaml  mc_maze_small_factor_latent.yaml  mc_maze_small_factor_latent_sweep.yaml  mc_maze_small_lfads_audit.yaml  mc_maze_small_lfads_controller_tuning.yaml  mc_maze_small_lfads_coordinated_dropout.yaml  mc_maze_small_lfads_gru.yaml  mc_maze_small_lfads_gru_cosmoothing.yaml  mc_maze_small_lfads_gru_cosmoothing_eval.yaml  mc_maze_small_lfads_gru_eval.yaml  mc_maze_small_lfads_gru_tuning.yaml  mc_maze_small_lfads_rate_calibration.yaml  mc_maze_small_lfads_unified_tuning.yaml  mc_maze_small_mean_rate.yaml  mc_maze_small_metric_audit.yaml  mc_maze_small_multiseed_robustness.yaml  mc_maze_small_neural_ode_objectives.yaml  mc_maze_small_neural_ode_refinement.yaml  mc_maze_small_neural_ode_tuning.yaml  mc_maze_small_neural_sde_tuning.yaml  mc_maze_small_recommended_window_cv.yaml  (+12 more)
(+283 files in other folders)
