[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "latentbrain"
version = "0.1.0"
description = "Research engineering foundation for latent neural dynamics modeling."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "LatentBrain contributors" }
]
dependencies = [
  "numpy",
  "pandas",
  "scipy",
  "pydantic",
  "pydantic-settings",
  "PyYAML",
  "python-dotenv",
  "typer",
  "rich",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "ruff",
  "mypy",
  "pre-commit",
  "types-PyYAML",
]
neurodata = [
  "h5py",
  "dandi",
  "nlb-tools",
]

[project.scripts]
latentbrain = "latentbrain.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN", "C4", "SIM"]
ignore = ["ANN401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
packages = ["latentbrain"]
strict = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --strict-config"
